--- a/recetas/Views/Home/Delete.cshtml
+++ b/recetas/Views/Home/Delete.cshtml
@@ -37,7 +37,7 @@
                     <i class="fas fa-trash me-2"></i>Sí, eliminar receta
                 </button>
 
-                <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary btn-lg px-5 shadow-sm">
+                <a asp-action="Index" asp-route-id="@Model.Id" class="btn btn-secondary btn-lg px-5 shadow-sm">
                     <i class="fas fa-arrow-left me-2"></i>Cancelar
                 </a>
             </form>
