--- a/recetas/Views/Home/Edit.cshtml
+++ b/recetas/Views/Home/Edit.cshtml
@@ -124,7 +124,7 @@
                     <button type="submit" class="btn btn-primary btn-lg px-4">
                         <i class="fas fa-save me-2"></i> Guardar Cambios
                     </button>
-                    <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-secondary btn-lg px-4">
+                    <a asp-action="Index" asp-route-id="@Model.Id" class="btn btn-outline-secondary btn-lg px-4">
                         <i class="fas fa-times me-2"></i> Cancelar
                     </a>
                 </div>
